--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <h1>DISNEY</h1>
 
-<p>The Walt Disney Company, mais conhecida apenas como Disney, é o maior conglomerado de mídia do mundo. A companhia foi fundada em 1923 pelos irmãos Walt Disney e Roy Oliver Disney, tendo como 
+<p> <em>The Walt Disney Company, mais conhecida apenas como Disney, é o maior conglomerado de mídia do mundo. A companhia foi fundada em 1923 pelos irmãos Walt Disney e Roy Oliver Disney, tendo como 
   especialidade as animações, mas ao longo dos anos a marca se expandiu para múltiplas áreas do entretenimento.A companhia começou a ganhar fôlego com a criação daquele que seria o maior símbolo da 
   Disney: o mascote Mickey Mouse. Criado em 1928, ele estrelou o curta Plane Crazy antes de protagonizar Steamboat Willie, o primeiro desenho animado sonorizado da empresa, e que foi um sucesso 
-  absoluto.
+  absoluto.</em>
 </P>
 
-<P>empresa cresceu ao longo dos anos seguintes, com o lançamento de animações consagradas, como Branca de Neve e os Sete Anões, Pinóquio, Fantasia, Dumbo, Bambi, Cinderela e Alice no País das Maravilhas. 
-Com tantos sucessos sob seu guarda-chuva, a Disney passou a diversificar suas produções a partir dos anos 1950, com filmes live-action, investimentos em TV, além dos parques de diversões temáticos.
-Com o passar dos anos, a Disney passou também a adquirir várias outras empresas. Como resultado, estúdios gigantes hoje operam como subsidiárias, como Lucasfilm, Marvel Entertainment, Pixar, 20th Century 
-Studios e Searchlight Pictures.
+<P><strong>empresa cresceu ao longo dos anos seguintes, com o lançamento de animações consagradas, como Branca de Neve e os Sete Anões, Pinóquio, Fantasia, Dumbo, Bambi, Cinderela e Alice no País das Maravilhas. 
+  Com tantos sucessos sob seu guarda-chuva, a Disney passou a diversificar suas produções a partir dos anos 1950, com filmes live-action, investimentos em TV, além dos parques de diversões temáticos.
+  Com o passar dos anos, a Disney passou também a adquirir várias outras empresas. Como resultado, estúdios gigantes hoje operam como subsidiárias, como Lucasfilm, Marvel Entertainment, Pixar, 20th Century 
+  Studios e Searchlight Pictures.</strong>
 </P>
 
 <P>Também operam sob a Disney canais de TV como a ESPN, Star e National Geographic, presentes no Brasil, além de outros dedicados a programação infantil, como o Disney Channel. No exterior, a empresa ainda é responsável pela emissora ABC.
