--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <h1>DISNEY</h1>
+<html lang="pt-br">
+  </head>
+     <meta charset="UTF-8"
+      <title>DISNEY</title>
+  </head>
+  <body>
 
-  <p> <em>The Walt Disney Company, m
+    <p> <em>The Walt Disney Company, m
     ￼
     Blog Luck Receptivo
     Natal: o que você precisa saber para aproveitar a cidade do sol. - Blog Luck Receptivo
@@ -12,13 +16,13 @@
     Disney: o mascote Mickey Mouse. Criado em 1928, ele estrelou o curta Plane Crazy antes de protagonizar Steamboat Willie, o primeiro desenho animado sonorizado da empresa, e que foi um sucesso 
     absoluto.</em></P>
 
-  <P><strong>empresa cresceu ao longo dos anos seguintes, com o lançamento de animações consagradas, como Branca de Neve e os Sete Anões, Pinóquio, Fantasia, Dumbo, Bambi, Cinderela e Alice no País das Maravilhas. 
+    <P><strong>empresa cresceu ao longo dos anos seguintes, com o lançamento de animações consagradas, como Branca de Neve e os Sete Anões, Pinóquio, Fantasia, Dumbo, Bambi, Cinderela e Alice no País das Maravilhas. 
     Com tantos sucessos sob seu guarda-chuva, a Disney passou a diversificar suas produções a partir dos anos 1950, com filmes live-action, investimentos em TV, além dos parques de diversões temáticos.
     Com o passar dos anos, a Disney passou também a adquirir várias outras empresas. Como resultado, estúdios gigantes hoje operam como subsidiárias, como Lucasfilm, Marvel Entertainment, Pixar, 20th Century 
     Studios e Searchlight Pictures.</strong></P>
 
     <P>Também operam sob a Disney canais de TV como a ESPN, Star e National Geographic, presentes no Brasil, além de outros dedicados a programação infantil, como o Disney Channel. No exterior, a empresa ainda é responsável pela emissora ABC.
-  Além disso, a Walt Disney Company também controla diferentes serviços de streaming direct to consumer, como é o caso do Disney+ e do Star+. Além disso, também é a principal acionista do Hulu, que nunca 
-  foi lançado no Brasil.</P>
-
+    Além disso, a Walt Disney Company também controla diferentes serviços de streaming direct to consumer, como é o caso do Disney+ e do Star+. Além disso, também é a principal acionista do Hulu, que nunca 
+   foi lançado no Brasil.</P>
+  </body>
 </html>
