--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   </head>
-     <meta charset="UTF-8">
-      <title>DISNEY</title>
-      <link real="stylesheet"href= "style.css">
+    <meta charset="UTF-8">
+    <title>DISNEY</title>
+    <link real="stylesheet"href= "style.css">
   </head>
   <body>
+    <img src="ABRE-PARQUE-DISNEY-ESTATUA-WALT-DISNEY-MICKEY-1.jpg-1.webp">
+    <h1>DISNEY</h1>
 
     <p> <em>The Walt Disney Company, m
     ￼
@@ -25,5 +27,22 @@
     <p>Também operam sob a Disney canais de TV como a ESPN, Star e National Geographic, presentes no Brasil, além de outros dedicados a programação infantil, como o Disney Channel. No exterior, a empresa ainda é responsável pela emissora ABC.
     Além disso, a Walt Disney Company também controla diferentes serviços de streaming direct to consumer, como é o caso do Disney+ e do Star+. Além disso, também é a principal acionista do Hulu, que nunca 
    foi lançado no Brasil.</p>
+   
+   <h2>Filmes</h2>
+
+    <ul>
+      <li class="itens">Enrolados</li>
+      <li class="itens">Princesa e o sapo</li>
+      <li class="itens">Bela e Fera</li>
+      <li class="itens">Toy Story</li>
+      <li class="itens">Divertidamente</li>
+      <li class="itens">Avatar</li>
+      <li class="itens">Encanto</li>
+      <li class="itens">A pequena Sereia</li>
+      <li class="itens">Valente</li>
+      <li class="itens">Decendente</li>
+      <li class="itens">Moana</li>
+    </ul>
   </body>
 </html>
+
